@startuml
' Title
title Class Diagram - Public Grievance System
'  skinparam classAttributeIconSize 0
' skinparam linetype ortho

' Classes
class User {
    - userId: String
    - fullName: String
    - email: String
    - phone: String
    - password: String
    - address: String
    + register(): void
    + login(): boolean
    + submitComplaint(c: Complaint): void
    + viewComplaintStatus(): List<Complaint>
}

class Worker {
    - workerId: String
    - department: String
    - workerName: String
    - password:String
    + login():boolean
    - assignedComplaints: List<Complaint>
    + viewAssignedComplaints(): List<Complaint>
    + updateComplaintStatus(complaintId: String, status: String): void
}

class Admin {
    - adminId: String
    - email: String
    - password: String
    + login(): boolean
    + assignComplaint(complaintId: String, workerId: String): void
    + approveResolution(complaintId: String): void
    + viewAllComplaints(): List<Complaint>
}

class Complaint {
    - complaintId: String
    - title: String
    - description: String
    - status: String
    - location: String
    - image: String
    - submittedBy: User
    - assignedTo: Worker
    + updateStatus(status: String): void
}

' Relationships
User "1" --> "M" Complaint : "submits"
Worker "1" --> "M" Complaint : "handles"
Admin "1" --> "M" Complaint : "   manages"


@enduml
